--- a/zuperPortfolioPrace/website portfolio/css/skills.css
+++ b/zuperPortfolioPrace/website portfolio/css/skills.css
@@ -3,37 +3,50 @@
     z-index: 1;
     overflow: hidden;
 }
-.main__section--skills::after{  
+.main__section--skills::before{  
     content: "";
     position: absolute;
     top: 0%;
-    left: -1%;
-    transform: translate(0%,-50%) rotate(-3deg);
+    left: 0%;
+    transform-origin: bottom right;
+    transform: translate(-.5%,-100%)rotate(-2.5deg) ;
 
-    width: 101%;
-    height: calc(10% / .5);
+    width: 110%;
+    height: var(--skewHeight);
+    /* min-height: 40px; */
     background-color: var(--gray);
-    z-index: 1;
-
 }
+
 .skills{
+    min-height: 75vh;
+    width: 100%;
     height: 75vh;
+    margin-top: 5px;
+
+    /* background-color: yellow; */
+
     /* flex C */
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
 }
 .skill{
+    position: relative;
+    /* background-color: red; */
     width: 31%;
     height: 65%;
+
+    text-align: center;
+
     /* flex C */
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 }
 .skill__img{
     position: relative;
+    margin-bottom: 12%;
 }
 .skill__img::before{
     box-sizing: border-box;
@@ -60,6 +73,20 @@
 
     width: 20%;
     height: 40%;
+}
+
+.skill__h3{
+margin-bottom: 3.5%;
+font-size: 1.5em;
+white-space: nowrap;
+
+}
+.skill__school{
+    margin-bottom: 6.5%;
+    
+}
+.skill__p{
+    
 }
 
 /*   <section class="skills">
