--- a/zuperPortfolioPrace/website portfolio/css/start.css
+++ b/zuperPortfolioPrace/website portfolio/css/start.css
@@ -1,5 +1,7 @@
 :root{
     --sectionMinHeight: 320px;
+    --portfolioMinHeight: var(--sectionMinHeight);
+
     --wrapperWidth: 90%;
     --navWidth: 50%;
 
@@ -13,6 +15,8 @@
     /* 45 */
 
     --noteBeforeLeft: 0%;
+
+    --skewHeight: 200px;
 
 
     --blue : rgba(73,222,244,1);
@@ -42,7 +46,7 @@ a{
 }
 body{
     background-color: #fff;
-    font-family: Arial, Helvetica, sans-serif;   
+    font-family: Arial, Helvetica, sans-serif;  
 
 }
 .hide{
