--- a/zuperPortfolioPrace/website portfolio/css/progress.css
+++ b/zuperPortfolioPrace/website portfolio/css/progress.css
@@ -6,6 +6,7 @@
     height: 100%;
     background-image: url(../img/paralax.jpg);
     background-size: cover;
+    background-position:center;
 
     box-shadow:inset 100vw 0 0 0 rgba(0,0,0,.82);
     z-index: -1;
@@ -83,6 +84,11 @@
 
       margin-top: 28%;
 
+
+    border: 5px solid white;
+    border-top: none;
+    border-left: none;
+
        /* flex C */
      display: flex;
      flex-direction: column;
@@ -92,6 +98,9 @@
 .progress__label{
     color: white;
     margin-bottom: 27%;
+    font-size: 1.4em;
+    letter-spacing: .15em;
+
 }
 /*   <!-- progress section                                                                   -->
                 <section class="progress">
