--- a/zuperPortfolioPrace/website portfolio/css/footer.css
+++ b/zuperPortfolioPrace/website portfolio/css/footer.css
@@ -2,6 +2,8 @@
     position: relative;
     min-height: 100vh;
     height: 100vh;
+
+    background-color: transparent;
     
 }
 .footer::before{
