--- a/zuperPortfolioPrace/website portfolio/css/skills.css
+++ b/zuperPortfolioPrace/website portfolio/css/skills.css
@@ -65,6 +65,8 @@
 }
 .skill__img:hover::before{
     border-width: 7px;
+    right: -5px;
+    top: -5px;
 
 }
 .skill__img::after{
@@ -84,6 +86,8 @@
 }
 .skill__img:hover::after{
     border-width: 7px;
+    left: -5px;
+    bottom: -5px;
 }
 
 .skill__h3{
