--- a/zuperPortfolioPrace/website portfolio/css/start.css
+++ b/zuperPortfolioPrace/website portfolio/css/start.css
@@ -29,6 +29,8 @@
     --grayDark: rgba(182,182,182);
     --greenDark: rgba(0,148,63,1);
 
+    --orange: rgba(252,198,38,1);
+
 
 }
 *{
@@ -49,11 +51,15 @@ body{
     font-family: Arial, Helvetica, sans-serif;  
 
 }
+
+
+
 .hide{
     display:none;
 }
 ::-webkit-scrollbar {
     width: 15px;
+    background-color:transparent;
     /* display: none; */
   }
   ::-webkit-scrollbar-thumb {
