--- a/zuperPortfolioPrace/website portfolio/css/header.css
+++ b/zuperPortfolioPrace/website portfolio/css/header.css
@@ -213,7 +213,7 @@
         margin-top: 20px;
         overflow: hidden;
 
-        z-index: 2;
+        /* z-index: 2; */
 
     }
     .header__button:hover{
