--- a/zuperPortfolioPrace/website portfolio/css/projects.css
+++ b/zuperPortfolioPrace/website portfolio/css/projects.css
@@ -1,5 +1,6 @@
 .main__section--projects{
     background-color: var(--gray);
+    z-index: 1;
 }
 .projects{
     min-height: 135vh;
@@ -7,3 +8,54 @@
     
 
 }
+
+.projects__filters{
+    width: 100%;
+    height: 1.5%;
+    margin-bottom: 7.5%;
+    /* background-color: red; */
+    /* flex C */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.projects__filter{
+    /* background-color: blue; */
+    height: 100%;
+    margin-left: 1.5%;
+    letter-spacing: .15em;
+}
+
+.projects__album{
+    height: 60%;
+    width: 100%;
+    background-color: red;
+}
+.projects__project--first{
+    
+}
+.projects__project--second{
+
+}
+/*    <section class="main__section main__section--projects">
+rojects__project--first"></article>
+                    <article class="projects__project projects__project--second"></article>
+                    <article class="projects__project projects__project--thirt"></article>
+                    <article class="projects__project projects__project--fourth"></article>
+                    <article class="projects__project projects__project--fifth"></arti
+            <!-- wrapper 90% of width                                                               -->
+            <section class="main__wrapper">  106 77
+                <!-- projects section                                                                   -->
+                <section class="projects">
+                    <!-- filters -->
+                    <section class="projects__filters">
+                        <span class="projects__filter">All</span>
+                        <span class="projects__filter">HTML/CSS</span>
+                        <span class="projects__filter">JS</span>
+                        <span class="projects__filter">React</span>
+                        <span class="projects__filter">Node</span>
+                    </section>
+                    <!-- project collection -->
+                    <section class="projects__album">
+                                                                      -->
+                </section> */
