--- a/zuperPortfolioPrace/website portfolio/css/projects.css
+++ b/zuperPortfolioPrace/website portfolio/css/projects.css
@@ -27,16 +27,70 @@
 }
 
 .projects__album{
+    position: relative;
     height: 60%;
     width: 100%;
     background-color: red;
+
+    /* flex C */
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    /* align-items: space-between; */
 }
 .projects__project--first{
+    height: var(--projectHeight);
+    width: var(--projectWidthBig);
+    background-color: blue;
+    align-self: flex-start;
     
 }
 .projects__project--second{
+    height: var(--projectHeight2);
+    
+    width: var(--projectWidthBig);
+    background-color: green;
+    align-self: flex-start;
+
 
 }
+.projects__project--thirt{
+    height: var(--projectHeight3);
+    width: 25%;
+    background-color: yellow;
+    align-self: flex-start;
+
+
+    
+}
+.projects__project--fourth{
+    height: 52%;
+    width: var(--projectWidthBig);
+    background-color: purple;
+    align-self: flex-end;
+    transform: translateY(-9vh);
+
+
+}
+.projects__project--fifth{
+    height: 48%;
+    width: var(--projectWidthBig);
+    background-color: black;
+    align-self: flex-end;
+transform: translateY(-9vh);
+
+    
+}
+.projects__project--sixth{
+    height: 37%;
+    width: 25%;
+    background-color: black;
+    align-self: flex-end;
+transform: translateY(-9vh);
+
+    
+}
+
 /*    <section class="main__section main__section--projects">
 rojects__project--first"></article>
                     <article class="projects__project projects__project--second"></article>
