--- a/zuperPortfolioPrace/Flubmaster/css/footer.css
+++ b/zuperPortfolioPrace/Flubmaster/css/footer.css
@@ -6,13 +6,13 @@
     .footer{
         position: absolute;
         z-index: 3;
+        left: 0;
         bottom:0;
         height: 10vh;
         width: 100%;
         background-color: rgba(0, 0, 0,.88);
-    font-size: .8em;
+        font-size: .8em;
 
-    
         /* overflow: hidden; */
         /* flex C */
         display: flex;
