--- a/zuperPortfolioPrace/website portfolio/css/projects.css
+++ b/zuperPortfolioPrace/website portfolio/css/projects.css
@@ -25,72 +25,99 @@
     margin-left: 1.5%;
     letter-spacing: .15em;
 }
+.projects__link{
+    color: inherit;
+}
 
 .projects__album{
     position: relative;
     height: 60%;
     width: 100%;
-    background-color: red;
+    /* background-color: red; */
 
     /* flex C */
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    /* align-items: space-between; */
+    align-items: stretch;
+
+}
+.projects__project{
+    overflow: hidden;
+    /* overflow-x: scroll; */
+
 }
 .projects__project--first{
     height: var(--projectHeight);
-    width: var(--projectWidthBig);
-    background-color: blue;
+    width: var(--projectWidth);
+    /* background-color: blue; */
     align-self: flex-start;
+
+    order: var(--projectOrder);
     
 }
 .projects__project--second{
     height: var(--projectHeight2);
     
-    width: var(--projectWidthBig);
-    background-color: green;
+    width: var(--projectWidth2);
+    /* background-color: green; */
     align-self: flex-start;
+
+    order: var(--projectOrder2);
 
 
 }
 .projects__project--thirt{
     height: var(--projectHeight3);
-    width: 25%;
-    background-color: yellow;
-    align-self: flex-start;
+    width: var(--projectWidth3);
+    /* background-color: yellow; */
+    align-self: flex-end;
+
+    order: var(--projectOrder3);
 
 
     
 }
 .projects__project--fourth{
-    height: 52%;
-    width: var(--projectWidthBig);
-    background-color: purple;
-    align-self: flex-end;
-    transform: translateY(-9vh);
+    height: var(--projectHeight4);
+    width: var(--projectWidth4);
+    /* background-color: purple; */
+    align-self: flex-start;
+    transform: translateY(var(--projectMargin));
+
+    order: var(--projectOrder4);
 
 
 }
 .projects__project--fifth{
-    height: 48%;
-    width: var(--projectWidthBig);
-    background-color: black;
-    align-self: flex-end;
-transform: translateY(-9vh);
+    height: var(--projectHeight5);
+    width: var(--projectWidth5);
+    /* background-color: black; */
+    align-self: var(--projectSelf5);
+    transform: translateY(var(--projectMargin));
+
+    order: var(--projectOrder5);
 
     
 }
 .projects__project--sixth{
-    height: 37%;
-    width: 25%;
-    background-color: black;
+    height:var(--projectHeight6);
+    width: var(--projectWidth6);
+    /* background-color: black; */
     align-self: flex-end;
-transform: translateY(-9vh);
-
-    
+    transform: translateY(var(--projectMargin));
+  
+    order: var(--projectOrder6);
 }
+.project__iframe{
 
+    width: 100%;
+    min-width: 540px;
+    height: 100%;
+    min-height: 320px;
+
+    /* overflow: scroll; */
+}
 /*    <section class="main__section main__section--projects">
 rojects__project--first"></article>
                     <article class="projects__project projects__project--second"></article>
