--- a/zuperPortfolioPrace/website portfolio/css/start.css
+++ b/zuperPortfolioPrace/website portfolio/css/start.css
@@ -7,68 +7,8 @@
     --navWidth: 50%;
 
 
-    --projectWidthBig: 36%;
-    --projectWidthSmall: 25%;
+  
 
-    --projectHeight: 44%;
-    --projectHeight2: 48%;
-    --projectHeight3: 59%;
-
-    --projectHeight1: 52%;
-    --projectHeight2: 48%;
-    --projectHeight3: 37%;
-
-
-
-
-    
-/*  height: 44%;
-    width: 36%;
-    background-color: blue;
-    align-self: flex-start;
-    
-}
-.projects__project--second{
-    height: 48%;
-    width: 36%;
-    background-color: green;
-    align-self: flex-start;
-
-
-}
-.projects__project--thirt{
-    height: 59%;
-    width: 25%;
-    background-color: yellow;
-    align-self: flex-start;
-
-
-    
-}
-.projects__project--fourth{
-    height: 52%;
-    width: 36%;
-    background-color: purple;
-    align-self: flex-end;
-    transform: translateY(-9vh);
-
-
-}
-.projects__project--fifth{
-    height: 48%;
-    width: 36%;
-    background-color: black;
-    align-self: flex-end;
-transform: translateY(-9vh);
-
-    
-}
-.projects__project--sixth{
-    height: 37%;
-    width: 25%;
-    background-color: black;
-    align-self: flex-end;
-transform: translateY(-9vh); */
     --aboutLineLeft: 50%;
 
     --noteBeforeSize: 25px;
@@ -81,18 +21,42 @@ transform: translateY(-9vh); */
 
     --skewHeight: 200px;
 
-
+/* colors */
+/* about */
     --blue : rgba(73,222,244,1);
     --yellow : rgba(255,216,0,1);
     --green : rgba(86,222,150,1);
-
+/* sections */
     --gray: rgba(239,239,239,1);
-
-
+/* progress */
     --grayDark: rgba(182,182,182);
     --greenDark: rgba(0,148,63,1);
-
     --orange: rgba(252,198,38,1);
+
+      /* projects */
+      --projectWidthBig: 36%;
+      --projectWidthSmall: 25%;
+  
+      --projectWidth: var(--projectWidthBig);
+      --projectWidth2: var(--projectWidthBig);
+      --projectWidth3: var(--projectWidthSmall);
+  
+      --projectWidth4: var(--projectWidthBig);
+      --projectWidth5: var(--projectWidthBig);
+      --projectWidth6: var(--projectWidthSmall);
+  
+  
+      --projectHeight: 44%;
+      --projectHeight2: 48%;
+      --projectHeight3: 59%;
+  
+      --projectHeight4: 52%;
+      --projectHeight5: 48%;
+      --projectHeight6: 37%;
+  
+      --projectSelf5: flex-end;
+  
+      --projectMargin: -9vh;
 
 
 }
@@ -105,6 +69,7 @@ a{
     text-decoration: none;
     color: #fff;
 }
+
 .img{
     width: 100%;
     height: 100%;
@@ -115,14 +80,26 @@ body{
 
 }
 
+.paralax{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url(../img/paralax.jpg);
+    background-size: cover;
+    background-position:center;
 
+    box-shadow:inset 100vw 0 0 0 rgba(0,0,0,.82);
+    z-index: -1;
+}
 
 .hide{
     display:none;
 }
 ::-webkit-scrollbar {
     width: 15px;
-    background-color:transparent;
+    background-color:white;
     /* display: none; */
   }
   ::-webkit-scrollbar-thumb {
@@ -132,3 +109,82 @@ body{
   /* ::-webkit-scrollbar-thumb:hover {
     background-color: transparent;
   } */
+
+  @keyframes fadeIn{
+ 0%{
+          box-shadow: inset 100vw 0 0 0 rgba(0,0,0,.6);
+      }
+      100%{
+          box-shadow: inset 100vw 0 0 0 rgba(0,0,0,.82);
+      }
+  }
+
+  @keyframes fadeOut{
+       0%{
+          box-shadow: inset 100vw 0 0 0 rgba(0,0,0,.82);
+      }
+    100%{
+        box-shadow: inset 100vw 0 0 0 rgba(0,0,0,.6);
+    }
+}
+
+
+
+
+
+
+
+
+.arrow{
+    position: fixed;
+    width: 70px;
+
+    height: 70px;
+
+    right: 10px;
+    bottom: 10px;
+    background-color: rgba(255,255,255,.82);
+    /* border: 3px white solid; */
+    /* border-radius: 15px; */
+    z-index: 3;
+}
+.arrow::after{
+    display: none;
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+
+    width: 55%;
+    height: 75%;
+
+    border-top: 3px solid white;
+    border-right: 3px solid white;
+    transform: translate(3px,-3px);
+
+}
+.arrow::before{
+    display: none;
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+    width: 55%;
+    height: 75%;
+
+    border-bottom: 3px solid white;
+    border-left: 3px solid white;
+    transform: translate(-3px,3px);
+
+}
+.arrow__ico{
+    font-size: 60px;
+    position: absolute;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
+
+
