--- a/zuperPortfolioPrace/website portfolio/css/start.css
+++ b/zuperPortfolioPrace/website portfolio/css/start.css
@@ -28,6 +28,9 @@
     --green : rgba(86,222,150,1);
 /* sections */
     --gray: rgba(239,239,239,1);
+    --footerGray: rgba(153,153,153,1);
+    --footerDarkGray: rgba(175,175,175,1);
+
 /* progress */
     --grayDark: rgba(182,182,182);
     --greenDark: rgba(0,148,63,1);
