--- a/myProjects/website portfolio/css/about.css
+++ b/myProjects/website portfolio/css/about.css
@@ -106,7 +106,7 @@
     color: white;
     font-size: 2em;
     font-weight: 800;
-
+    padding: 5%;
 
     order:var(--noteOrder);
     /* background-color: yellow; */
